tests/ui/generic-associated-types/must-prove-where-clauses-on-norm.next.stderr
error[E0308]: mismatched types
  --> $DIR/must-prove-where-clauses-on-norm.rs:23:61
   |
LL |     let func: for<'a, 'b> fn((), &'b str) -> &'static str = foo::<()>;
   |                                                             ^^^^^^^^^ one type is more general than the other
   |
   = note: expected fn pointer `for<'b> fn((), &'b _) -> &_`
              found fn pointer `for<'b> fn((), &'b _) -> &_`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
